--- a/RangeExtract.ipynb
+++ b/RangeExtract.ipynb
@@ -1,15 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# [Codewars Range Extraction](https://www.codewars.com/kata/51ba717bb08c1cd60f00002f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "A format for expressing an ordered list of integers is to use a comma separated list of either\n",
+    "\n",
+    "individual integers\n",
+    "or a range of integers denoted by the starting integer separated from the end integer in the range by a dash, '-'. The range includes all integers in the interval including both endpoints. It is not considered a range unless it spans at least 3 numbers. For example \"12,13,15-17\"\n",
+    "Complete the solution so that it takes a list of integers in increasing order and returns a correctly formatted string in the range format.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
