--- a/RangeExtract.ipynb
+++ b/RangeExtract.ipynb
@@ -42,60 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-5 -3\n",
-      "-2 -2\n",
-      "-1 -1\n",
-      "0 0\n",
-      "1 1\n",
-      "2 3\n",
-      "4 4\n",
-      "5 5\n",
-      "6 7\n",
-      "8 8\n",
-      "9 9\n",
-      "10 10\n",
-      "11 11\n",
-      "12 14\n",
-      "15 15\n",
-      "16 17\n",
-      "18 18\n",
-      "19 19\n",
-      "20 20\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-24-bb03b9dc362d>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0mchain\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;32mFalse\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;32mfor\u001B[0m \u001B[0mx\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mitems\u001B[0m \u001B[0;32min\u001B[0m \u001B[0menumerate\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mnumbers\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 6\u001B[0;31m     \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mitems\u001B[0m\u001B[0;34m+\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mnumbers\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mx\u001B[0m\u001B[0;34m+\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      7\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0mitems\u001B[0m\u001B[0;34m+\u001B[0m\u001B[0;36m1\u001B[0m \u001B[0;34m==\u001B[0m \u001B[0mnumbers\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mx\u001B[0m\u001B[0;34m+\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      8\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0mchain\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mIndexError\u001B[0m: list index out of range"
-     ]
-    }
-   ],
+   "execution_count": 36,
+   "outputs": [],
    "source": [
     "positions = {}\n",
     "start = 0\n",
     "end = 0\n",
     "chain = False\n",
     "for x, items in enumerate(numbers):\n",
-    "    print(items+1, numbers[x+1])\n",
-    "    if items+1 == numbers[x+1]:\n",
-    "        if not chain:\n",
-    "            chain = True\n",
-    "            start = x\n",
-    "    elif chain:\n",
-    "        positions[start] = x\n",
-    "        chain = False\n",
-    "\n",
+    "    try:\n",
+    "        if items+1 == numbers[x+1]:\n",
+    "            if not chain:\n",
+    "                chain = True\n",
+    "                start = x\n",
+    "        elif chain:\n",
+    "            positions[start] = x\n",
+    "            chain = False\n",
+    "    except IndexError:\n",
+    "        if chain:\n",
+    "            positions[start] = x\n",
+    "            chain = False\n",
     "\n"
    ],
    "metadata": {
@@ -107,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
-      "text/plain": "{1: 5, 6: 8, 9: 13, 14: 15}"
+      "text/plain": "{1: 5, 6: 8, 9: 13, 14: 15, 16: 19}"
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
