--- a/RangeExtract.ipynb
+++ b/RangeExtract.ipynb
@@ -42,9 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "outputs": [],
    "source": [
+    "target = []\n",
     "positions = {}\n",
     "start = 0\n",
     "end = 0\n",
@@ -57,11 +58,20 @@
     "                start = x\n",
     "        elif chain:\n",
     "            positions[start] = x\n",
+    "            end = x\n",
     "            chain = False\n",
+    "            target.append(f'{str(numbers[start])}-{str(numbers[end])}')\n",
+    "        else:\n",
+    "            target.append(str(items))\n",
+    "\n",
     "    except IndexError:\n",
     "        if chain:\n",
     "            positions[start] = x\n",
+    "            end = x+1\n",
     "            chain = False\n",
+    "            target.append(f'{str(start)}-{str(end)}')\n",
+    "        else:\n",
+    "            target.append(str(items))\n",
     "\n"
    ],
    "metadata": {
@@ -73,69 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "outputs": [
     {
      "data": {
-      "text/plain": "{1: 5, 6: 8, 9: 13, 14: 15, 16: 19}"
+      "text/plain": "'-6,-3-1,3-5,7-11,14-15,16-20'"
      },
-     "execution_count": 37,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "positions"
+    "','.join(target)\n",
+    "# returns \"-6,-3-1,3-5,7-11,14,15,17-20\""
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "str_numbers = [str(num) for num in numbers]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'-6,-3,-2,-1,0,1,3,4,5,7,8,9,10,11,14,15,17,18,19,20'"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "','.join(str_numbers)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
