added additional comments

--- a/RangeExtract.ipynb
+++ b/RangeExtract.ipynb
@@ -42,36 +42,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "outputs": [],
    "source": [
-    "target = []\n",
-    "positions = {}\n",
-    "start = 0\n",
-    "end = 0\n",
-    "chain = False\n",
-    "for x, items in enumerate(numbers):\n",
-    "    try:\n",
-    "        if items+1 == numbers[x+1]:\n",
-    "            if not chain:\n",
-    "                chain = True\n",
-    "                start = x\n",
-    "        elif chain:\n",
-    "            positions[start] = x\n",
-    "            end = x\n",
-    "            chain = False\n",
-    "            target.append(f'{str(numbers[start])}-{str(numbers[end])}')\n",
-    "        else:\n",
-    "            target.append(str(items))\n",
     "\n",
-    "    except IndexError:\n",
-    "        if chain:\n",
-    "            positions[start] = x\n",
-    "            end = x+1\n",
-    "            chain = False\n",
-    "            target.append(f'{str(start)}-{str(end)}')\n",
-    "        else:\n",
-    "            target.append(str(items))\n",
+    "def solution(args):\n",
+    "    numbers = args\n",
+    "    target = [] # list to return\n",
+    "    start = 0 # Variable to hold starting position of a chain\n",
+    "    end = 0 # Variable to indicate ending position of a chain\n",
+    "    chain = False # Indicates if there is currently a chain of numbers.\n",
+    "    for x, items in enumerate(numbers):\n",
+    "        try:\n",
+    "            if items+1 == numbers[x+1]:\n",
+    "                if not chain:\n",
+    "                    chain = True\n",
+    "                    start = x\n",
+    "            elif chain:\n",
+    "                end = x\n",
+    "                chain = False\n",
+    "                target.append(f'{str(numbers[start])}-{str(numbers[end])}')\n",
+    "            else:\n",
+    "                target.append(str(items))\n",
+    "        except IndexError:\n",
+    "            if chain:\n",
+    "                end = x+1\n",
+    "                chain = False\n",
+    "                target.append(f'{str(start)}-{str(end)}')\n",
+    "            else:\n",
+    "                target.append(str(items))\n",
+    "    return ','.join(target)\n",
     "\n"
    ],
    "metadata": {
@@ -83,21 +83,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "outputs": [
     {
      "data": {
       "text/plain": "'-6,-3-1,3-5,7-11,14-15,16-20'"
      },
-     "execution_count": 76,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "','.join(target)\n",
+    "solution(numbers)\n",
     "# returns \"-6,-3-1,3-5,7-11,14,15,17-20\""
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
