--- a/RangeExtract.ipynb
+++ b/RangeExtract.ipynb
@@ -42,10 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 114,
    "outputs": [],
    "source": [
-    "\n",
     "def solution(args):\n",
     "    numbers = args\n",
     "    target = [] # list to return\n",
@@ -53,24 +52,39 @@
     "    end = 0 # Variable to indicate ending position of a chain\n",
     "    chain = False # Indicates if there is currently a chain of numbers.\n",
     "    for x, items in enumerate(numbers):\n",
+    "        # Try statement checks if the end of the list has been reached\n",
     "        try:\n",
+    "            # check if next number increases incrementally\n",
     "            if items+1 == numbers[x+1]:\n",
+    "\n",
+    "                # If no chain has been started, begin a chain, and save its starting position\n",
     "                if not chain:\n",
     "                    chain = True\n",
     "                    start = x\n",
+    "\n",
+    "            # If numbers don't increase, but there is a chain, mark this position as the end.\n",
     "            elif chain:\n",
+    "                end = x\n",
+    "                chain = False\n",
+    "                # If the chain is not >= 2 numbers, then treat as regular numbers\n",
+    "                if end - start >= 2:\n",
+    "                    target.append(f'{str(numbers[start])}-{str(numbers[end])}')\n",
+    "                else:\n",
+    "                    target.append(str(numbers[start]))\n",
+    "                    target.append(str(items))\n",
+    "\n",
+    "            # If numbers don't increase, and theres no chain, just add the number to the list.\n",
+    "            else:\n",
+    "                target.append(str(items))\n",
+    "        # If the end of the list has been reached, check for a chain, and record the last number.\n",
+    "        except IndexError:\n",
+    "            if chain:\n",
     "                end = x\n",
     "                chain = False\n",
     "                target.append(f'{str(numbers[start])}-{str(numbers[end])}')\n",
     "            else:\n",
     "                target.append(str(items))\n",
-    "        except IndexError:\n",
-    "            if chain:\n",
-    "                end = x+1\n",
-    "                chain = False\n",
-    "                target.append(f'{str(start)}-{str(end)}')\n",
-    "            else:\n",
-    "                target.append(str(items))\n",
+    "    # Return all items joined with a ','\n",
     "    return ','.join(target)\n",
     "\n"
    ],
@@ -83,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 115,
    "outputs": [
     {
      "data": {
-      "text/plain": "'-6,-3-1,3-5,7-11,14-15,16-20'"
+      "text/plain": "'-6,-3-1,3-5,7-11,14,15,17-20'"
      },
-     "execution_count": 103,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
