Modified to account for edge cases involving the last number of the list.

--- a/RangeExtract.ipynb
+++ b/RangeExtract.ipynb
@@ -27,11 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "outputs": [],
    "source": [
-    "numbers = [-6, -3, -2, -1, 0, 1, 3, 4, 5, 7, 8, 9, 10, 11, 14, 15, 17, 18, 19, 20]\n",
-    "# returns \"-6,-3-1,3-5,7-11,14,15,17-20\""
+    "numbers = [-91, -89, -88, -86, -84, -83, -80, -79, -76, -75, -74, -73, -70, -69, -66, -63, -62]\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 125,
    "outputs": [],
    "source": [
     "def solution(args):\n",
@@ -81,7 +80,11 @@
     "            if chain:\n",
     "                end = x\n",
     "                chain = False\n",
-    "                target.append(f'{str(numbers[start])}-{str(numbers[end])}')\n",
+    "                if end - start >= 2:\n",
+    "                    target.append(f'{str(numbers[start])}-{str(numbers[end])}')\n",
+    "                else:\n",
+    "                    target.append(str(numbers[start]))\n",
+    "                    target.append(str(items))\n",
     "            else:\n",
     "                target.append(str(items))\n",
     "    # Return all items joined with a ','\n",
@@ -97,20 +100,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 126,
    "outputs": [
     {
      "data": {
-      "text/plain": "'-6,-3-1,3-5,7-11,14,15,17-20'"
+      "text/plain": "'-91,-89,-88,-86,-84,-83,-80,-79,-76--73,-70,-69,-66,-63,-62'"
      },
-     "execution_count": 115,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "solution(numbers)\n",
-    "# returns \"-6,-3-1,3-5,7-11,14,15,17-20\""
+    "# should equal '-91,-89,-88,-86,-84,-83,-80,-79,-76--73,-70,-69,-66,-63,-62"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-63 - -62"
    ],
    "metadata": {
     "collapsed": false,
